API-Anbindung implementation.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,6 @@
 }
 
 :root {
-    /*--accent-color: #FF6F61;*/
     --primary-text-color: #000000;
     --secondary-text-color: #888888;
     --font-bebas-neue: "Bebas Neue", sans-serif;
@@ -29,7 +28,7 @@ body {
     background-size: 500px, cover;
     background-position: calc(100% - 20px) calc(100% - 60px), center;
     background-repeat: no-repeat;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 @media only screen and (max-width: 640px) {
